Replaced the drawing code.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <main>
-	<canvas width="800" height="400"></canvas>
+	<canvas width="960" height="540"></canvas>
 	<div id="controls">
 		<section>
 			<button id="playButton" data-playing="no"></button>
@@ -16,9 +16,9 @@
 		
 			<label>Track: 
 				<select id="trackSelect">
-					<option value="media/New Adventure Theme.mp3" selected>New Adventure Theme</option>
-					<option value="media/Peanuts Theme.mp3">Peanuts Theme</option>
-					<option value="media/The Picard Song.mp3">The Picard Song</option>
+					<option value="media/Thrash Pack.mp3" selected>Thrash Pack</option>
+					<option value="media/Never to Return.mp3">Never to Return</option>
+					<option value="media/Dread Design.mp3">Dread Design</option>
 				</select>
 			</label>
 		</section>
@@ -29,9 +29,9 @@
 		</section>
 
 		<section>
-			<span><input type="checkbox" id="gradientCB"><label for="gradientCB">Show Gradient</label></span>
+			<!-- <span><input type="checkbox" id="gradientCB"><label for="gradientCB">Show Gradient</label></span> -->
 			<span><input type="checkbox" id="barsCB"><label for="barsCB">Show Bars</label></span>
-			<span><input type="checkbox" id="circlesCB"><label for="circlesCB">Show Circles</label></span>
+			<!-- <span><input type="checkbox" id="circlesCB"><label for="circlesCB">Show Circles</label></span> -->
 			<span><input type="checkbox" id="noiseCB"><label for="noiseCB">Show Noise</label></span>
 			<span><input type="checkbox" id="invertCB"><label for="invertCB">Show Invert</label></span>
 			<span><input type="checkbox" id="embossCB"><label for="embossCB">Show Emboss</label></span>
