--- a/index.html
+++ b/index.html
@@ -29,15 +29,13 @@
 		</section>
 
 		<section>
-			<!-- <span><input type="checkbox" id="gradientCB"><label for="gradientCB">Show Gradient</label></span> -->
-			<span><input type="checkbox" id="barsCB"><label for="barsCB">Show Bars</label></span>
-			<!-- <span><input type="checkbox" id="circlesCB"><label for="circlesCB">Show Circles</label></span> -->
 			<span><input type="checkbox" id="noiseCB"><label for="noiseCB">Show Noise</label></span>
 			<span><input type="checkbox" id="invertCB"><label for="invertCB">Show Invert</label></span>
 			<span><input type="checkbox" id="embossCB"><label for="embossCB">Show Emboss</label></span>
 
 		  </section>
 	</div>
+	<p>the plan is to do like three different versions of this, and alternate between them based on the track</p>
 </main>
 </body>
 </html>
