begin setup for risk of rain 2

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 					<option value="media/Thrash Pack.mp3" selected>Thrash Pack</option>
 					<option value="media/Never to Return.mp3">Never to Return</option>
 					<option value="media/Dread Design.mp3">Dread Design</option>
+					<option value="media/You're Gonna Need a bigger Ukulele.mp3">You're Gonna Need a Bigger Ukulele</option>
 				</select>
 			</label>
 		</section>
