end of Pyre, beggining of HK
Added frequency Sinusoids to Pyre, and began work on hollow knight

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 					<option value="media/Never to Return.mp3">Never to Return</option>
 					<option value="media/Dread Design.mp3">Dread Design</option>
 					<option value="media/You're Gonna Need a bigger Ukulele.mp3">You're Gonna Need a Bigger Ukulele</option>
+					<option value="media/You're Gonna Need a bigger Ukulele.mp3">You're Gonna Need a Bigger Ukulele</option>
+					<option value="media/You're Gonna Need a bigger Ukulele.mp3">You're Gonna Need a Bigger Ukulele</option>
+					<option value="media/Nightmare King.mp3">Nightmare King</option>
+					
 				</select>
 			</label>
 		</section>
@@ -30,7 +34,6 @@
 		</section>
 
 		<section>
-			<span><input type="checkbox" id="noiseCB"><label for="noiseCB">Show Noise</label></span>
 			<span><input type="checkbox" id="invertCB"><label for="invertCB">Show Invert</label></span>
 			<span><input type="checkbox" id="embossCB"><label for="embossCB">Show Emboss</label></span>
 
