completed Hollow Knight
Hollow Knight Now functions as intended for all three tracks

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 					<option value="media/You're Gonna Need a bigger Ukulele.mp3">You're Gonna Need a Bigger Ukulele</option>
 					<option value="media/You're Gonna Need a bigger Ukulele.mp3">You're Gonna Need a Bigger Ukulele</option>
 					<option value="media/Nightmare King.mp3">Nightmare King</option>
+					<option value="media/Greenpath.mp3">Greenpath</option>
+					<option value="media/Pure Vessel.mp3">Pure Vessel</option>
+
 					
 				</select>
 			</label>
