updated ROR2 to include final songs
Now includes final songs

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 					<option value="media/Never to Return.mp3">Never to Return</option>
 					<option value="media/Dread Design.mp3">Dread Design</option>
 					<option value="media/You're Gonna Need a bigger Ukulele.mp3">You're Gonna Need a Bigger Ukulele</option>
-					<option value="media/You're Gonna Need a bigger Ukulele.mp3">You're Gonna Need a Bigger Ukulele</option>
-					<option value="media/You're Gonna Need a bigger Ukulele.mp3">You're Gonna Need a Bigger Ukulele</option>
+					<option value="media/Thermodynamic Equilibrium.mp3">Thermodynamic Equilibrium</option>
+					<option value="media/Antarctic Oscillation.mp3">Antarctic Oscillation</option>
 					<option value="media/Nightmare King.mp3">Nightmare King</option>
 					<option value="media/Greenpath.mp3">Greenpath</option>
 					<option value="media/Pure Vessel.mp3">Pure Vessel</option>
